--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="description" content="Best free online courses ...">
     <meta name="keywords" content="Manhal,Tamr,Manhal Tamr,programming,courses,python,django,backend,bootstrap,js,html,css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="icons/web.ico">
+    <link rel="icon" href="icons/icon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <section class="home" id="home">
@@ -70,9 +71,67 @@
         <h1 class="text-center"><span>Our</span> Services</h1>
         <div class="box">
             <div class="card">
-                
+                <em class="fas fa-mobile-alt"></em>
+                <h5>Mobile Dev</h5>
+                <div class="par">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat maiores incidunt cupiditate dolores velit neque dignissimos?
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <em class="far fa-file-code"></em>
+                <h5>Web Dev</h5>
+                <div class="par">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat maiores incidunt cupiditate dolores velit neque dignissimos?
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <em class="fas fa-laptop-code"></em>
+                <h5>Desktop Dev</h5>
+                <div class="par">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat maiores incidunt cupiditate dolores velit neque dignissimos?
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <em class="fas fa-sitemap"></em>
+                <h5>Architect</h5>
+                <div class="par">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat maiores incidunt cupiditate dolores velit neque dignissimos?
+                    </p>
+                </div>
             </div>
         </div>
+    </section>
+
+    <section class="skills">
+        <div class="container-skills">
+            <h1><span>My </span>Skills</h1>
+            <div class="content-skills">
+                <div class="skill"><img src="images/html1.png" alt=""></div>
+                <div class="skill"><img src="images/css1.png" alt=""></div>
+                <div class="skill"><img src="images/js.png" alt=""></div>
+                <div class="skill"><img src="images/bootstrap.png" alt=""></div>
+                <div class="skill"><img src="images/node.png" alt=""></div>
+                <div class="skill"><img src="images/react.png" alt=""></div>
+                <div class="skill"><img src="images/php.png" alt=""></div>
+                <div class="skill"><img src="images/python1.png" alt=""></div>
+                <div class="skill"><img src="images/django.png" alt=""></div>
+                <div class="skill"><img src="images/docker.png" alt=""></div>
+                <div class="skill"><img src="images/git.png" alt=""></div>
+                <div class="skill"><img src="images/vue1.png" alt=""></div>
+
+            </div>
+        </div>
+        <div class="container-img">
+            <img src="images/skil.png" alt="">
+        </div>
+
     </section>
 
 </body>
